@@ -30,7 +30,7 @@ MainWidget::MainWidget(QWidget *parent)
   : QMainWindow(parent)
 {
   admin_config=new Config(this);
-  admin_config->load();
+  admin_config->load(false);
 
   setMinimumSize(sizeHint());
   setMaximumHeight(sizeHint().height());
