@@ -182,3 +182,7 @@
 	* Added desktop entries in 'xdg/'.
 2017-02-23 Fred Gleason <fredg@paravelsystems.com>
 	* Renamed the Windows icons.
+2017-02-23 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'src/common/config.cpp' and
+	'src/common/config.h' that caused the Username to be detected
+	from the environment by RDAdminb(1).
